<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="650dp"
            android:layout_height="570dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_for_small_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView54"
                style="@style/TextView_bold_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/shop_details_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView55"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/shop_name_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView54" />

            <TextView
                android:id="@+id/textView56"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/line_txt_01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView55" />

            <TextView
                android:id="@+id/textView57"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/line_txt_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView56" />

            <TextView
                android:id="@+id/textView58"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/city_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView57" />

            <TextView
                android:id="@+id/textView59"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/pin_code_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView58" />

            <TextView
                android:id="@+id/textView60"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/gst_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView59" />

            <TextView
                android:id="@+id/textView61"
                style="@style/TextView_medium_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/phone_no_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView60" />

            <EditText
                android:id="@+id/et_shop_name"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView55"
                app:layout_constraintTop_toBottomOf="@+id/textView54" />

            <EditText
                android:id="@+id/et_line_01"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintStart_toEndOf="@+id/textView56"
                app:layout_constraintTop_toBottomOf="@+id/et_shop_name" />

            <EditText
                android:id="@+id/et_line_02"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@+id/textView57"
                app:layout_constraintTop_toBottomOf="@+id/et_line_01" />

            <EditText
                android:id="@+id/et_city"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.582"
                app:layout_constraintStart_toEndOf="@+id/textView58"
                app:layout_constraintTop_toBottomOf="@+id/et_line_02" />

            <EditText
                android:id="@+id/et_pincode"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.445"
                app:layout_constraintStart_toEndOf="@+id/textView59"
                app:layout_constraintTop_toBottomOf="@+id/et_city" />

            <EditText
                android:id="@+id/et_gst"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.592"
                app:layout_constraintStart_toEndOf="@+id/textView60"
                app:layout_constraintTop_toBottomOf="@+id/et_pincode" />

            <EditText
                android:id="@+id/et_phone_number_reg_02"
                style="@style/Edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.252"
                app:layout_constraintStart_toEndOf="@+id/textView61"
                app:layout_constraintTop_toBottomOf="@+id/et_gst" />

            <Button
                android:id="@+id/btn_save_reg_act"
                style="@style/Orange_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="32dp"
                android:text="@string/save_txt_reg"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_number_reg_02" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>